--- a/public/css/base.css
+++ b/public/css/base.css
@@ -29,7 +29,7 @@ button {
 }
 
 table {
-	min-width: 85%;
+	/* min-width: 85%; */
 	margin: 0 auto;
 }
 
@@ -279,7 +279,7 @@ a:hover, a:active {
 }
 
 .form {
-	width: 100%;
+	/* width: 100%; */
 }
 
 .form thead th, .form thead tr {
@@ -295,7 +295,7 @@ a:hover, a:active {
 
 .form tr > td:nth-child(even) {
 	text-align: left;
-	width: 70%;
+	/* width: 70%; */
 }
 
 .invisible tbody > tr:nth-child(odd) {
@@ -566,7 +566,7 @@ a:hover, a:active {
 }
 
 .manga .media {
-	border: 1px solid #ddd;
+	/* border: 1px solid #ddd; */
 	height: 310px;
 	margin: 0.25em;
 }
@@ -578,7 +578,7 @@ a:hover, a:active {
 	top: calc(50% - 22.4px);
 	left: 43.5px;
 	left: calc(50% - 66.5px);
-	z-index: 50;
+	z-index: 40;
 }
 
 .manga .media > .edit_buttons button {
