Cleanup styles of settings page, cleanup syncing command a bit

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -921,3 +921,11 @@ CSS Tabs
 	}
 }
 
+/* ----------------------------------------------------------------------------
+Settings Form
+-----------------------------------------------------------------------------*/
+.settings.form .content article {
+	margin: 1em;
+	display: inline-block;
+	width: auto;
+}
