--- a/public/css/base.css
+++ b/public/css/base.css
@@ -30,6 +30,7 @@ button {
 
 table {
 	/* min-width: 85%; */
+	box-shadow: 0 48px 80px -32px rgba(0, 0, 0, 0.3);
 	margin: 0 auto;
 }
 
@@ -124,6 +125,7 @@ a:hover, a:active {
 }
 
 .flex {
+	display: inline-block;
 	display: flex
 }
 
@@ -156,12 +158,13 @@ a:hover, a:active {
 }
 
 .media-wrap {
-	text-align: left;
+	text-align: center;
 	margin: 0 auto;
 	position: relative;
 }
 
 .media-wrap-flex {
+	display: inline-block;
 	display: flex;
 	flex-wrap: wrap;
 	align-content: space-evenly;
@@ -200,6 +203,14 @@ td .media-wrap-flex {
 
 .full_width {
 	width: 100%;
+}
+
+.full-height {
+	max-height: none;
+}
+
+.toph {
+	margin-top: 0;
 }
 
 /* -----------------------------------------------------------------------------
@@ -330,9 +341,18 @@ td .media-wrap-flex {
 	background: inherit;
 }
 
-.invisible tr, .invisible td, .invisible th {
+.borderless,
+.borderless tr,
+.borderless td,
+.borderless th,
+.invisible tr,
+.invisible td,
+.invisible th {
+	box-shadow: none;
 	border: 0;
 }
+
+
 
 /* -----------------------------------------------------------------------------
 	Message boxes
@@ -410,10 +430,7 @@ td .media-wrap-flex {
 	height: 311px;
 	margin: var(--normal-padding);
 	z-index: 0;
-}
-
-.small_character {
-
+	background: rgba(0,0,0,0.15);
 }
 
 .details picture.cover,
@@ -426,10 +443,6 @@ picture.cover {
 .character > img,
 .small_character > img {
 	width: 100%;
-}
-
-.small_character {
-
 }
 
 .media .edit_buttons > button {
@@ -561,6 +574,7 @@ picture.cover {
 
 .anime .row, .manga .row {
 	width: 100%;
+	display: inline-block;
 	display: flex;
 	align-content: space-around;
 	justify-content: space-around;
@@ -575,6 +589,7 @@ picture.cover {
 
 .anime .row > div, .manga .row > div {
 	font-size: 0.8em;
+	display: inline-block;
 	display: flex-item;
 	align-self: center;
 	text-align: center;
@@ -719,12 +734,6 @@ picture.cover {
 
 .details .cover {
 	display: block;
-	width: 284px;
-	/* height: 402px; */
-}
-
-.details h2 {
-	margin-top: 0;
 }
 
 .details .flex > * {
@@ -749,6 +758,11 @@ picture.cover {
 	text-align: left;
 }
 
+.details a h1,
+.details a h2 {
+	margin-top: 0;
+}
+
 .character,
 .small_character,
 .person {
@@ -763,6 +777,11 @@ picture.cover {
 .person {
 	width: 225px;
 	height: 338px;
+}
+
+.small_person {
+	width: 200px;
+	height: 300px;
 }
 
 .character a {
@@ -808,9 +827,20 @@ picture.cover {
 	max-height: 338px;
 }
 
+.small_person img,
+.small_person picture {
+	max-height: 300px;
+	max-width: 200px;
+}
+
 .min-table {
 	min-width: 0;
 	margin-left: 0;
+}
+
+.max-table {
+	min-width:100%;
+	margin: 0;
 }
 
 aside.info {
@@ -930,6 +960,7 @@ aside.info picture, aside.info img {
 CSS Tabs
 -----------------------------------------------------------------------------*/
 .tabs {
+	display: inline-block;
 	display: flex;
 	flex-wrap: wrap;
 	background: #efefef;
@@ -978,13 +1009,22 @@ CSS Tabs
 	border: 1px solid #e5e5e5;
 	border-top: 0;
 	display: block;
-	padding: 20px 30px 30px;
+	padding: 15px;
 	background: #fff;
 	width: 100%;
+	margin: 0 auto;
+	
+	overflow: auto;
+	/* text-align: center; */
 }
 
 .tabs .content {
 	display: none;
+	max-height: 950px;
+}
+
+.tabs .content.full-height {
+	max-height: none;
 }
 
 @media (min-width: 600px) {
@@ -995,6 +1035,78 @@ CSS Tabs
 	.tabs .content {
 		order: 99;
 	}
+}
+
+/* ---------------------------------------------------------------------------
+ Vertical Tabs
+ ----------------------------------------------------------------------------*/
+
+.vertical-tabs {
+	border: 1px solid #e5e5e5;
+	box-shadow: 0 48px 80px -32px rgba(0, 0, 0, 0.3);
+	margin: 0 auto;
+	position: relative;
+	width: 100%;
+}
+
+.vertical-tabs input[type="radio"] {
+	display: none;
+}
+
+.vertical-tabs .tab {
+	align-items: center;
+	display: inline-block;
+	display: flex;
+	flex-wrap: nowrap;
+}
+
+.vertical-tabs .tab label {
+	align-items: center;
+	background: #e5e5e5;
+	border: 1px solid #e5e5e5;
+	color: #7f7f7f;
+	cursor: pointer;
+	font-size: 18px;
+	font-weight: bold;
+	padding: 0 20px;
+	width: 28%;
+}
+
+.vertical-tabs .tab label:hover {
+	background: #d8d8d8;
+}
+
+.vertical-tabs .tab label:active {
+	background: #ccc;
+}
+
+.vertical-tabs .tab .content {
+	display: none;
+	border: 1px solid #e5e5e5;
+	border-left: 0;
+	border-right: 0;
+	max-height: 950px;
+	overflow: auto;
+}
+
+.vertical-tabs .tab .content.full-height {
+	max-height: none;
+}
+
+.vertical-tabs [type=radio]:checked + label {
+	border: 0;
+	background: #fff;
+	color: #000;
+	width: 38%;
+}
+
+.vertical-tabs [type=radio]:focus + label {
+	box-shadow: inset 0px 0px 0px 3px #2aa1c0;
+	z-index: 1;
+}
+
+.vertical-tabs [type=radio]:checked ~ .content {
+	display: block;
 }
 
 /* ----------------------------------------------------------------------------
