--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -21,7 +21,7 @@
 
 @media screen and (max-width: 800px) {
 	* {
-		max-width: none !important;
+		max-width: none;
 	}
 
 	table {
@@ -45,6 +45,10 @@
 		width: 100%;
 	}
 
+	table tbody {
+		width: 100%;
+	}
+
 	table td {
 		display: inline-block;
 	}
@@ -61,6 +65,10 @@
 	.details .media-details td:nth-child(2n+1) {
 		font-weight: bold;
 		width: 100%;
+	}
+
+	table.streaming-links tr td:not(:first-child) {
+		display:none;
 	}
 }
 
