--- a/public/css/general.css
+++ b/public/css/general.css
@@ -23,6 +23,7 @@ body {
 
 button {
 	background: rgba(255, 255, 255, 0.65);
+	border-radius: 0.5em;
 	margin: 0;
 }
 
@@ -617,7 +618,6 @@ picture.cover {
 	position: absolute;
 	top: 147px;
 	left: 0;
-	height: 100%;
 	width: 100%;
 	z-index: 5;
 }
@@ -658,10 +658,6 @@ picture.cover {
 	/* max-width: 100rem; */
 	max-width: 80%;
 	margin: 0 auto;
-}
-
-.fixed .text {
-	max-width: 40em;
 }
 
 .details .cover {
